tests/dataset/tpc-ds/compiler/kotlin/q91.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q91.kt:44:12: error: redeclaration: Customer
data class Customer(var c_customer_sk: Int, var c_current_cdemo_sk: Int, var c_current_hdemo_sk: Int, var c_current_addr_sk: Int)
           ^
/tmp/q91.kt:56:12: error: redeclaration: Customer
data class Customer(var c_customer_sk: Int, var c_current_cdemo_sk: Int, var c_current_hdemo_sk: Int, var c_current_addr_sk: Int)
           ^
/tmp/q91.kt:80:14: error: unresolved reference: first
val result = first(run {
             ^
